# telegram_to_pocket_bot

./: .gitignore  LICENSE.md  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
telegram_to_pocket_bot/: pocketapi.py
tests/: test_telegram_to_pocket_bot.py
